--- a/study/실습/20190521/css/Untitled-1_common.scss
+++ b/study/실습/20190521/css/Untitled-1_common.scss
@@ -31,7 +31,7 @@ header {
 }
 
 .section4 {
-  background: url(../img/itary4.jpg) no-repeat center bottom/cover;
+  background: rgb(81, 205, 214);
 }
 
 .inner-section {
@@ -109,6 +109,45 @@ header {
       }
     }
   }
+
+  .wrap-youtube {
+    position: relative;
+    height: 0px;
+    padding-bottom: 56.25%;
+    text-align: center;
+
+    iframe {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.next-btn {
+  position: fixed;
+  left: 50%;
+  bottom: 5%;
+  transform: translateX(-50%);
+  width: 70px;
+  cursor: pointer;
+
+  img {
+    width: 100%;
+  }
+}
+
+footer {
+  margin-top: 50px;
+
+  p {
+    border-top: 1px solid #fff;
+    padding: 40px 0px;
+    text-align: center;
+    color: #fff;
+  }
 }
 
 
@@ -177,6 +216,11 @@ header {
     ul {
       width: 100%;
       li {
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 10px;
+
+
         .sub-title {
           font-size: 1em;
         }
