--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -1,3 +1,15 @@
-* {margin: 0; padding: 0; box-sizing: border-box;}
+header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main {margin: 0; padding: 0; box-sizing: border-box;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
+input {
+  display: inline-block;
+  box-sizing: border-box;
+  border: 0;
+  vertical-align: middle;
+  white-space: normal;
+  background: none;
+  line-height: 1;
+  font-size: 13px;
+
+  &:focus {outline: none;}
+}
