--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -1,4 +1,4 @@
-* {
+body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -14,12 +14,27 @@ a {
   color: inherit;
 }
 
+input {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 0;
+  vertical-align: middle;
+  white-space: normal;
+  background: none;
+  line-height: 1;
+  font-size: 13px;
+}
+
+input:focus {
+  outline: none;
+}
+
 .text-ir {
   display: inline-block;
-  width: 100%;
-  text-indent: 100%;
-  white-space: nowrap;
   overflow: hidden;
+  width: 0px;
+  height: 0px;
 }
 
 header {
@@ -27,45 +42,177 @@ header {
   top: 0px;
   width: 100%;
   height: 61px;
-  background: pink;
+  background: #fff;
 }
 
-.main-tnb div {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
+i {
   font-size: 20px;
   color: #7A7F8B;
-  margin-top: 18px;
   text-align: center;
 }
 
-.main-tnb div:first-child {
+.main-tnb {
+  height: 100%;
+}
+
+.main-tnb .tnb-wrap {
+  height: 100%;
+  line-height: 61px;
+}
+
+.main-tnb .tnb-wrap > li {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  line-height: initial;
+}
+
+.main-tnb .tnb-wrap .menu-bar {
   margin-left: 25px;
 }
 
-.main-tnb div:nth-child(2) {
-  margin-left: 35px;
+.main-tnb .tnb-wrap .menu-bar i {
+  font-size: 22px;
 }
 
-.main-tnb div:nth-child(3) {
+.main-tnb .tnb-wrap .refresh {
+  margin-left: 50px;
+}
+
+.main-tnb .tnb-wrap .refresh i {
+  font-size: 18px;
+}
+
+.main-tnb .tnb-wrap .bell {
+  position: relative;
   margin-left: 31px;
 }
 
-.main-tnb div:nth-child(4) {
-  position: relative;
-  width: 320px;
+.main-tnb .tnb-wrap .bell.on:after {
+  content: "";
+  display: block;
+  background-color: red;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: auto;
+  bottom: 0px;
+  right: -3px;
+  border-radius: 5px;
+}
+
+.main-tnb .tnb-wrap .dash-board {
+  width: 300px;
+  height: 36px;
   margin-left: 40px;
-  background: black;
+  line-height: 36px;
+  font-size: 0;
 }
 
-.main-tnb div:nth-child(4) input {
-  width: 280px;
+.main-tnb .tnb-wrap .dash-board > * {
+  max-height: 36px;
+  vertical-align: middle;
+  font-size: initial;
 }
 
-.main-tnb .user-profile {
+.main-tnb .tnb-wrap .dash-board input {
+  width: 270px;
+  height: 100%;
+}
+
+.main-tnb .tnb-wrap .dash-board input:focus {
+  background: #F4F5F7;
+}
+
+.main-tnb .tnb-wrap .dash-board input::-webkit-input-placeholder {
+  padding-left: 15px;
+}
+
+.main-tnb .tnb-wrap .dash-board input:-ms-input-placeholder {
+  padding-left: 15px;
+}
+
+.main-tnb .tnb-wrap .dash-board input::-ms-input-placeholder {
+  padding-left: 15px;
+}
+
+.main-tnb .tnb-wrap .dash-board input::placeholder {
+  padding-left: 15px;
+}
+
+.main-tnb .tnb-wrap .dash-board a {
+  display: inline-block;
+  width: 30px;
+}
+
+.main-tnb .tnb-wrap .dash-board a i {
+  display: inline-block;
+  margin-top: 9px;
+}
+
+.user-wrap {
+  position: absolute;
+  top: 0px;
+  right: 60px;
+  height: 61px;
+}
+
+.user-wrap > * {
+  vertical-align: top;
+}
+
+.user-wrap .user-profile {
+  display: inline-block;
   width: 40px;
   height: 40px;
   background: url(../img/avatar_small.jpg) no-repeat center/cover;
+  border-radius: 20px;
+  margin-top: 10px;
+  margin-right: 30px;
+}
+
+.user-wrap .user-profile.on:after {
+  content: "";
+  display: block;
+  background-color: green;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: auto;
+  bottom: 0px;
+  right: -3px;
+  border: 2px solid #fff;
+  border-radius: 10px;
+}
+
+.user-wrap .user-info {
+  display: inline-block;
+  width: 25px;
+}
+
+.user-wrap .user-info li a {
+  line-height: 61px;
+}
+
+.user-wrap .user-info li ul {
+  position: absolute;
+  top: 100%;
+  right: 0%;
+  width: 160px;
+  background: #FFFFFF;
+}
+
+.user-wrap .user-info li ul li {
+  margin: 5px;
+  padding: 5px 0px 5px 20px;
+}
+
+.user-wrap .user-info li ul li a {
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  text-transform: capitalize;
+  font-size: 14px;
 }
 /*# sourceMappingURL=header.css.map */
