--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -1,4 +1,4 @@
-header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main {margin: 0; padding: 0; box-sizing: border-box;}
+body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main {margin: 0; padding: 0; box-sizing: border-box;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
 input {
@@ -16,10 +16,12 @@ input {
 
 .text-ir {
   display: inline-block;
-  width: 100%;
-  text-indent: 100%;
-  white-space: nowrap;
+  // width: 100%;
+  // text-indent: 100%;
+  // white-space: nowrap;
   overflow: hidden;
+  width: 0px;
+  height: 0px;
 }
 
 header {
@@ -27,69 +29,166 @@ header {
   top: 0px;
   width: 100%;
   height: 61px;
-  background: pink;
+  background: #fff;
+}
+
+i {
+  font-size: 20px;
+  color: #7A7F8B;
+  text-align: center;
 }
 
 .main-tnb {
+  height: 100%;
 
-  div {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-    color: #7A7F8B;
-    margin-top: 18px;
-    text-align: center;
+  .tnb-wrap {
+    height: 100%;
+    line-height: 61px;
 
-    &:first-child {
+    > li {
+      display: inline-block;
+      vertical-align: middle;
+      width: 20px;
+      height: 20px;
+      line-height: initial;
+    }
+
+    .menu-bar {
       margin-left: 25px;
+  
+      i {
+        font-size: 22px;
+      }
     }
-
-    &:nth-child(2) {
-      //font 살짝 줄이면 좋겠음
-      margin-left: 35px;
+  
+    .refresh {
+      margin-left: 50px;
+  
+      i {
+        font-size: 18px;
+      }
     }
-
-    &:nth-child(3) { 
+  
+    .bell {
       //왼쪽에 라인 1px로 넣어주기
-      margin-left: 31px;
-    }
-
-    &:nth-child(4) {
       position: relative;
+      margin-left: 31px;
+
+      &.on:after {
+        content: "";
+        display: block;
+        background-color: red;
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        top: auto;
+        bottom: 0px;
+        right: -3px;
+        border-radius:  5px;
+      }
+    }
+  
+    .dash-board {
       width: 300px;
+      height: 36px;
       margin-left: 40px;
+      line-height: 36px;
+      font-size: 0;
+
+      > * {
+        max-height: 36px;
+        vertical-align: middle;
+        font-size: initial;
+      }
 
       input {
-        width: 80%;
+        width: 270px;
+        height: 100%;
+  
+        &:focus {
+          background: #F4F5F7;
+        }
+  
+        &::placeholder {
+          padding-left: 15px;
+        }
       }
-
+  
       a {
-        display: inline-block
-        width: 18%;
-        // position: absolute;
-        // margin-left: 250px;
+        display: inline-block;
+        width: 30px;
+
+        i {
+          display: inline-block;
+          margin-top: 9px;
+        }
       }
     }
   }
+}
 
-  ul {
+.user-wrap{
+  position: absolute;
+  top: 0px;
+  right: 60px;
+  height: 61px;
 
-
+  > * {
+    vertical-align: top;
   }
 
-
   .user-profile {
+    display: inline-block;
     width: 40px;
     height: 40px;
     background: url(../img/avatar_small.jpg) no-repeat center/cover;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-right: 30px;
+
+    &.on:after {
+      content: "";
+      display: block;
+      background-color: green;
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      top: auto;
+      bottom: 0px;
+      right: -3px;
+      border: 2px solid #fff;
+      border-radius: 10px;
+    }
   }
 
   .user-info {
-    li {
-      ul {
-        li {
+    display: inline-block;
+    width: 25px;
 
+    li {
+      a {
+        line-height: 61px;
+      }
+
+      ul {
+        //span으로 저 화살표시 넣고 box-shadow주기
+        position: absolute;
+        top: 100%;
+        right: 0%;
+        width: 160px;
+        background: #FFFFFF;
+
+        li {
+          margin: 5px;
+          padding: 5px 0px 5px 20px;
+
+          a{
+            display: block;
+            height: 30px;
+            line-height: 30px;
+            text-transform: capitalize;
+            font-size: 14px;
+          }
         }
       }
     }
