--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -1,32 +1,1 @@
-header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-input {
-  display: inline-block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 0;
-  vertical-align: middle;
-  white-space: normal;
-  background: none;
-  line-height: 1;
-  font-size: 13px;
-}
-
-input:focus {
-  outline: none;
-}
-/*# sourceMappingURL=index.css.map */
+/* No CSS *//*# sourceMappingURL=index.css.map */
