--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -1,4 +1,4 @@
-body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main {margin: 0; padding: 0; box-sizing: border-box;}
+body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a {margin: 0; padding: 0; box-sizing: border-box;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
 input {
@@ -13,6 +13,7 @@ input {
 
   &:focus {outline: none;}
 }
+body {font-size: 14px;}
 
 header {
   position: fixed;
@@ -27,16 +28,11 @@ i {
   font-size: 20px;
   color: #7A7F8B;
   text-align: center;
-
-  span {
-    position: absolute;
-    left: -9999px;
-  }
 }
 
-.text-ir {
-  display: inline-block;
-  overflow: hidden;
+.child-text-ir {
+  position: absolute;
+  left: -9999px;
   width: 0px;
   height: 0px;
 }
@@ -77,35 +73,29 @@ i {
       position: relative;
       margin-left: 31px;
 
-      &.on:after {
+      &.notice:after {
         content: "";
         display: block;
-        background-color: red;
+        background-color: #EF5B5C;
         width: 10px;
         height: 10px;
         position: absolute;
         top: auto;
         bottom: 0px;
         right: -3px;
-        border-radius:  5px;
+        border-radius: 5px;
       }
     }
   
-    .dash-board {
+    .search-board {
       width: 300px;
       height: 36px;
       margin-left: 40px;
-      line-height: 36px;
-      font-size: 0;
-
-      > * {
-        max-height: 36px;
-        vertical-align: middle;
-        font-size: initial;
-      }
 
       input {
-        width: 270px;
+        display: block;
+        float: left;
+        width: 280px;
         height: 100%;
         padding-left: 15px;
   
@@ -120,15 +110,37 @@ i {
       }
   
       a {
-        display: inline-block;
-        width: 30px;
-
-        i {
-          display: inline-block;
-          margin-top: 9px;
-        }
+        display: block;
+        float: left;
+        width: fit-content;
+        margin-top: 7px;
       }
     }
+  }
+}
+
+.user-profile {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: url(../img/avatar_small.jpg) no-repeat center/cover;
+  border-radius: 20px;
+  margin-top: 10px;
+  margin-right: 30px;
+
+  &.notice:after {
+    content: "";
+    display: block;
+    background-color: #27A498;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: auto;
+    bottom: 0px;
+    right: -3px;
+    border: 2px solid #fff;
+    border-radius: 10px;
   }
 }
 
@@ -142,30 +154,6 @@ i {
     vertical-align: top;
   }
 
-  .user-profile {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background: url(../img/avatar_small.jpg) no-repeat center/cover;
-    border-radius: 20px;
-    margin-top: 10px;
-    margin-right: 30px;
-
-    &.on:after {
-      content: "";
-      display: block;
-      background-color: green;
-      width: 10px;
-      height: 10px;
-      position: absolute;
-      top: auto;
-      bottom: 0px;
-      right: -3px;
-      border: 2px solid #fff;
-      border-radius: 10px;
-    }
-  }
-
   .user-info {
     display: inline-block;
     width: 25px;
@@ -175,17 +163,63 @@ i {
         line-height: 61px;
       }
 
+      ul.on {
+        display: inline-block;
+      }
+
       ul {
-        //span으로 저 화살표시 넣고 box-shadow주기
+        display: none;
         position: absolute;
         top: 100%;
         right: 0%;
         width: 160px;
         background: #FFFFFF;
+        //전체 끊김없이 쉐도 주고싶음
+        box-shadow: -1px -1px 2px rgba(0,0,0,0.2), 1px 1px 2px rgba(0,0,0,0.2);
+        border-radius: 2px;
+
+        #triangle-border {
+          display: block;
+          position: absolute;
+          top: -16px;
+          left: 140px;
+          width: 12px;
+          height: 16px;
+          margin: 0px;
+          padding: 0px;
+          //색상 어떻게 할지 결정하기
+          border: 8px solid gray;
+          border-right-color: transparent;
+          border-left-color: transparent;
+          border-top-color: transparent;
+        }
 
         li {
+          position: relative;
           margin: 5px;
           padding: 5px 0px 5px 20px;
+
+          &:hover {
+            background: #F4F6F7;
+            border-radius: 2px;
+          }
+
+          &.notice:after {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 12px;
+            left: 85px;
+            width: 12px;
+            height: 15px;
+            background-color: #EF5B5C;
+            border-radius: 8px;
+            color: #FEF8F8;
+            font-size: 12px;
+            padding-left: 5px;
+            padding-top: 1px;
+            //width, height랑 padding 이랑 더해서 크기확인
+          }
 
           a{
             display: block;
@@ -193,8 +227,215 @@ i {
             line-height: 30px;
             text-transform: capitalize;
             font-size: 14px;
+            color: #2D3138;
+          }
+
+          i {
+            font-size: 13px;
+            margin-right: 10px;
+            color: #4E5156;
           }
         }
+
+        #design-line-1 {
+          display: block;
+          height: 1px;
+          margin: 0px;
+          padding: 0px;
+          border-top: 1px solid #EAEDF0;
+        }
+      }
+    }
+  }
+}
+
+.main-gnb {
+  // display: none;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 250px;
+  height: 100%;
+  background: #1B1E24;
+
+  #main-gnb-header {
+    height: 60px;
+    background: #21262D;
+
+    #main-gnb-header-wrap {
+      padding-top: 15px;
+      overflow: hidden;
+
+      h1 {
+        float: left;
+        color: #fff;
+        padding-left: 15px;
+        font-size: 25px;
+        font-weight: normal;
+        
+        span {
+          display: inline-block;
+          width: 5px;
+          height: 5px;
+          border-radius: 2.5px;
+          margin-left: 1px;
+          background: #fff;
+          vertical-align: middle;
+        }
+      }
+
+      div {
+        float: right;
+        padding: 0px 15px;
+
+        a {
+          display: block;
+          float: left;
+          width: 32px;
+          height: 32px;
+          background: black;
+          text-align: center;
+          padding-top: 8px;
+
+
+          i {
+            font-size: 15px;
+            color: #fff;
+          }
+        }
+
+        .mail {
+          position: relative;
+          margin-left: 5px;
+
+          &.notice:after {
+            content: "";
+            display: block;
+            background-color: #EF5B5C;
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            top: 5px;
+            bottom: auto;
+            right: 3px;
+            border-radius: 5px;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+#main-gnb-contents {
+  top: 60px;
+  
+  #gnb-user-profile {
+    height: 90px;
+    padding-top: 22px;
+
+    .user-profile {
+      float: left;
+      background-image: url(../img/avatar.jpg);
+      width: 46px;
+      height: 46px;
+      border-radius: 23px;
+      margin: 0px 0px 0px 25px;
+
+      &.notice:after {
+        width: 13px;
+        height: 13px;
+        bottom: -3px;
+        right: -1px;
+        border: none;
+        border-radius: 6px;
+      }
+    }
+
+    h2 {
+      float: left;
+      color: #fff;
+      text-transform: capitalize;
+      font-weight: normal;
+      font-size: 20px;
+      margin-left: 15px;
+
+      span {
+        display: block;
+        padding-top: 5px;
+        color: #8B919F;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+#main-gnb-menu {
+  * {
+    font-size: 15px;
+    color: #8B919F;
+    text-transform: capitalize;
+  }
+
+  > li {
+    position: relative;
+    width: 100%;
+
+    > &:nth-child(4), &:nth-child(10) {
+      i {
+        margin-left: 2px;
+      }
+    }
+
+    > a {
+      display: block;
+      width: 100%;
+      padding: 14px 0px 14px 30px;
+
+      i {
+        padding-right: 5px;
+      }
+
+      &:hover {
+        color: #fff;
+
+        i {
+          color: #fff;
+        }
+      }
+    }
+
+    //2번째 ul
+    //click하면 나타나게 해야함
+    ul.show {
+      display: block;
+    }
+
+    ul {
+      display: none;
+      width: 100%;
+      background: #21262D;
+
+      //두번째 li부터 보더탑 적용하고싶음
+      li+li:first-child {
+        // border-top: 1px solid #fff;
+      }
+
+      li {
+
+        a {
+          display: block;
+          padding: 8px 0px 8px 45px;
+          transition: border .2s;
+          font-size: 14px;
+          color: #AFB7BF;
+          transition: padding-left .2s;
+
+          &:hover {
+            padding-left: 55px;
+          }
+        }
+
       }
     }
   }
