gnb-header position변경, tag줄이기

--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -371,6 +371,8 @@ i {
 }
 
 #main-gnb-menu {
+  // overflow: scroll;
+
   * {
     font-size: 15px;
     color: #8B919F;
@@ -412,7 +414,7 @@ i {
     }
 
     ul {
-      display: none;
+      // display: none;
       width: 100%;
       background: #21262D;
 
