--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -264,7 +264,7 @@ i {
   border-top: 1px solid #EAEDF0;
 }
 
-.main-gnb {
+#main-gnb {
   position: fixed;
   top: 0px;
   left: 0px;
@@ -273,25 +273,25 @@ i {
   background: #1B1E24;
 }
 
-.main-gnb #main-gnb-header {
+#main-gnb #main-gnb-header {
+  position: relative;
   height: 60px;
   background: #21262D;
 }
 
-.main-gnb #main-gnb-header #main-gnb-header-wrap {
-  padding-top: 15px;
-  overflow: hidden;
-}
-
-.main-gnb #main-gnb-header #main-gnb-header-wrap h1 {
+#main-gnb #main-gnb-header h1 {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   float: left;
   color: #fff;
-  padding-left: 15px;
   font-size: 25px;
   font-weight: normal;
 }
 
-.main-gnb #main-gnb-header #main-gnb-header-wrap h1 span {
+#main-gnb #main-gnb-header h1 span {
   display: inline-block;
   width: 5px;
   height: 5px;
@@ -301,41 +301,55 @@ i {
   vertical-align: middle;
 }
 
-.main-gnb #main-gnb-header #main-gnb-header-wrap div {
+#main-gnb #main-gnb-header ul {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   float: right;
-  padding: 0px 15px;
 }
 
-.main-gnb #main-gnb-header #main-gnb-header-wrap div a {
+#main-gnb #main-gnb-header ul li + li {
+  margin-left: 5px;
+}
+
+#main-gnb #main-gnb-header ul li {
+  position: relative;
   display: block;
   float: left;
   width: 32px;
   height: 32px;
   background: black;
   text-align: center;
-  padding-top: 8px;
 }
 
-.main-gnb #main-gnb-header #main-gnb-header-wrap div a i {
+#main-gnb #main-gnb-header ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+#main-gnb #main-gnb-header ul li a i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   font-size: 15px;
   color: #fff;
 }
 
-.main-gnb #main-gnb-header #main-gnb-header-wrap div .mail {
-  position: relative;
-  margin-left: 5px;
-}
-
-.main-gnb #main-gnb-header #main-gnb-header-wrap div .mail.notice:after {
+#main-gnb #main-gnb-header ul .mail.notice:after {
   content: "";
   display: block;
-  background-color: #EF5B5C;
-  width: 10px;
-  height: 10px;
   position: absolute;
   top: 5px;
   bottom: auto;
   right: 3px;
+  width: 10px;
+  height: 10px;
+  background-color: #EF5B5C;
   border-radius: 5px;
 }
 
