visibility: collapse , hidden

--- a/study/실습/20190524/css/table-mobile-visibility.css
+++ b/study/실습/20190524/css/table-mobile-visibility.css
@@ -17,7 +17,7 @@
     margin: 20px 0px;
   }
   .contents table th {
-    visibility: hidden;
+    visibility: collapse;
   }
   .contents table td {
     display: block;
