--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -1,4 +1,4 @@
-body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a {
+body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a, section, article, p {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -26,12 +26,13 @@ input {
   font-size: 13px;
 }
 
-input:focus {
-  outline: none;
-}
-
 body {
   font-size: 14px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: normal;
 }
 
 header {
@@ -40,6 +41,7 @@ header {
   width: 100%;
   height: 61px;
   background: #fff;
+  z-index: 2;
 }
 
 i {
@@ -71,6 +73,7 @@ i {
   width: 20px;
   height: 20px;
   line-height: initial;
+  cursor: pointer;
 }
 
 #main-tnb .tnb-wrap .menu-bar {
@@ -350,6 +353,10 @@ header[open] #main-gnb #main-gnb-header {
   position: relative;
   height: 60px;
   background: #21262D;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 header[open] #main-gnb #main-gnb-header h1 {
@@ -471,6 +478,8 @@ header[open] #main-gnb #main-gnb-contents .gnb-user-profile h2 span {
 }
 
 header[open] #main-gnb .main-gnb-menu {
+  height: calc(100vh - 150px);
+  overflow: auto;
   margin-top: 0px;
 }
 
