--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -1,4 +1,4 @@
-body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a {margin: 0; padding: 0; box-sizing: border-box;}
+body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a, section, article, p {margin: 0; padding: 0; box-sizing: border-box;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
 input {
@@ -10,10 +10,9 @@ input {
   background: none;
   line-height: 1;
   font-size: 13px;
-
-  &:focus {outline: none;}
 }
 body {font-size: 14px;}
+h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: normal;}
 
 header {
   position: fixed;
@@ -21,6 +20,7 @@ header {
   width: 100%;
   height: 61px;
   background: #fff;
+  z-index: 2;
 }
 
 i {
@@ -50,6 +50,7 @@ i {
       width: 20px;
       height: 20px;
       line-height: initial;
+      cursor: pointer;
     }
 
     .menu-bar {
@@ -339,6 +340,7 @@ header {
         position: relative;
         height: 60px;
         background: #21262D;
+        user-select: none;
 
         h1 {
           position: absolute;
@@ -459,7 +461,8 @@ header {
       }
 
       .main-gnb-menu {
-        //scroll 생기게 하기
+        height: calc(100vh - 150px);
+        overflow: auto;
         margin-top: 0px;
 
         * {
