--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -12,7 +12,7 @@ header[open] + main > #main-wrap {
   left: 250px;
 }
 
-.overall {
+#overall {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,94 +22,195 @@ header[open] + main > #main-wrap {
   height: 155px;
 }
 
-.overall article {
+#overall article {
   position: relative;
   width: 24.5%;
   background: #27A599;
   padding: 20px;
 }
 
-.overall article h2 {
+#overall article h2 {
   color: #1A1D23;
   font-size: 11px;
   font-weight: 600;
   letter-spacing: 0.5px;
 }
 
-.overall article ul:first-of-type {
+#overall article ul:first-of-type {
   position: absolute;
   top: 15px;
   right: 20px;
   overflow: hidden;
 }
 
-.overall article ul:first-of-type li {
+#overall article ul:first-of-type li {
   float: left;
 }
 
-.overall article ul:first-of-type li:nth-child(2) i {
+#overall article ul:first-of-type li:nth-child(2) i {
   font-size: 13px;
   margin-left: 5px;
 }
 
-.overall article ul:first-of-type li i {
+#overall article ul:first-of-type li i {
   vertical-align: middle;
   font-size: 10px;
-  color: #1A6F66;
+  color: rgba(0, 0, 0, 0.4);
 }
 
-.overall article ul:nth-of-type(2) {
+#overall article ul:nth-of-type(2) {
   overflow: hidden;
   margin-top: 10px;
 }
 
-.overall article ul:nth-of-type(2) li {
+#overall article ul:nth-of-type(2) li {
   position: relative;
   float: left;
   margin-right: 10px;
 }
 
-.overall article ul:nth-of-type(2) li h3 {
+#overall article ul:nth-of-type(2) li h3 {
   text-transform: capitalize;
   margin-bottom: 5px;
-  color: #e4f5f3;
+  color: rgba(255, 255, 255, 0.9);
 }
 
-.overall article ul:nth-of-type(2) li span {
+#overall article ul:nth-of-type(2) li span {
   font-weight: 600;
   letter-spacing: 0.5px;
   color: #fff;
 }
 
-.overall article ul:nth-of-type(2) li + li {
+#overall article ul:nth-of-type(2) li + li {
   margin-left: 11px;
 }
 
-.overall article ul:nth-of-type(2) li + li:before {
+#overall article ul:nth-of-type(2) li + li:before {
   position: absolute;
   left: -11px;
   content: '';
   display: block;
   width: 1px;
   height: 40px;
-  background: #218D83;
+  background: rgba(0, 0, 0, 0.2);
 }
 
-.overall article p {
+#overall article p {
   margin-top: 25px;
-  color: #17645C;
+  color: rgba(0, 0, 0, 0.4);
   font-size: 13px;
 }
 
-.overall article p span:first-of-type {
+#overall article p span:first-of-type {
   display: block;
   width: 290px;
   height: 2px;
-  background: #1C776F;
+  background: rgba(0, 0, 0, 0.3);
   margin-bottom: 10px;
 }
 
-.overall article p span:nth-of-type(2) {
-  color: #fff;
+#overall article p span:nth-of-type(2) {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+#overall article:nth-child(2) {
+  background: #1992D6;
+}
+
+#overall article:nth-child(3) {
+  background: #726186;
+}
+
+#overall article:nth-child(4) {
+  background: #E9595A;
+}
+
+#sales-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 343px;
+  margin-top: 10px;
+}
+
+#sales-info .map-area {
+  width: 66.3%;
+  overflow: hidden;
+}
+
+#sales-info .map-area div {
+  float: left;
+  width: 65%;
+  background: #47B2A8;
+}
+
+#sales-info .map-area div img {
+  width: 100%;
+}
+
+#sales-info .map-area div + div {
+  width: 35%;
+  height: 100%;
+  background: #21262D;
+}
+
+#sales-info .sales {
+  width: 33%;
+  background: white;
+}
+
+#sales-info .sales ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 30px;
+}
+
+#sales-info .sales ul li {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+#sales-info .sales ul li h3 {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 13px;
+  margin-bottom: 10px;
+}
+
+#sales-info .sales ul li span {
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 400;
+}
+
+#sales-info .sales table {
+  width: 100%;
+  margin: 0px 20px;
+}
+
+#sales-info .sales table tbody tr td {
+  padding: 10px;
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 13px;
+}
+
+#sales-info .sales table tbody tr td:first-child, #sales-info .sales table tbody tr td:nth-child(3) {
+  color: #27A599;
+}
+
+#sales-info .sales table tbody tr:first-child td {
+  text-transform: uppercase;
+  font-size: 14px;
+  padding-left: 5px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+#sales-info .sales table tbody tr + tr {
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 /*# sourceMappingURL=index.css.map */
