--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -131,8 +131,8 @@ header[open] + main > #main-wrap {
       background: #47B2A8;
 
       img {
+        // 이미지크기가 조금 이상한듯
         width: 100%;
-
       }
     }
 
