--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -6,7 +6,8 @@ body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a, section, articl
 }
 
 body {
-  font-size: 14px;
+  font-family: sans-serif;
+  font-size: 13px;
 }
 
 li {
