--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -1,6 +1,6 @@
 //<reset>
 body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a, section, article, p {margin: 0; padding: 0; box-sizing: border-box;}
-body {font-size: 14px;}
+body {font-family: sans-serif; font-size: 13px;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
 input {
