--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -8,7 +8,7 @@
   z-index: 1;
 }
 
-header[open] + main > #main-wrap {
+header.open + main > #main-wrap {
   left: 250px;
 }
 
@@ -103,7 +103,7 @@ header[open] + main > #main-wrap {
 
 #overall article p span:first-of-type {
   display: block;
-  width: 290px;
+  width: 95%;
   height: 2px;
   background: rgba(0, 0, 0, 0.3);
   margin-bottom: 10px;
@@ -125,6 +125,10 @@ header[open] + main > #main-wrap {
   background: #E9595A;
 }
 
+section + section {
+  margin-top: 10px;
+}
+
 #sales-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -133,7 +137,6 @@ header[open] + main > #main-wrap {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 343px;
-  margin-top: 10px;
 }
 
 #sales-info .map-area {
@@ -215,5 +218,70 @@ header[open] + main > #main-wrap {
 
 #sales-info .sales .table-wrap table tbody tr + tr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.joing {
+  width: 66.3%;
+  background: wheat;
+}
+
+.joing .joing-group.img-effect {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.joing .joing-group {
+  position: relative;
+  width: 44%;
+  height: auto;
+  overflow: hidden;
+  -webkit-transition: scale .4s;
+  transition: scale .4s;
+}
+
+.joing .joing-group em {
+  font-style: initial;
+}
+
+.joing .joing-group img {
+  width: 100%;
+}
+
+.joing .joing-group .post {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 225px;
+  padding: 18px;
+  background: rgba(40, 162, 224, 0.85);
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.joing .joing-group .post i {
+  display: inline-block;
+  color: #fff;
+}
+
+.joing .joing-group .post span:first-of-type {
+  display: block;
+  margin-top: 20px;
+  font-size: 12px;
+  opacity: 0.7;
+}
+
+.joing .joing-group .post p {
+  margin-top: 15px;
+  font-size: 21px;
+  line-height: 1.3;
+}
+
+.joing .joing-group .post span {
+  display: inline-block;
+  margin: 30px 5px 5px 0px;
+}
+
+.joing .joing-group .user-profile {
+  display: none;
 }
 /*# sourceMappingURL=index.css.map */
