--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -8,7 +8,7 @@
   z-index: 1;
 }
 
-header[open] + main > #main-wrap {
+header.open + main > #main-wrap {
   left:250px;
 }
 
@@ -99,7 +99,7 @@ header[open] + main > #main-wrap {
 
       span:first-of-type {
         display: block;
-        width: 290px;
+        width: 95%;
         height: 2px;
         background: rgba(0,0,0,0.3);
         margin-bottom: 10px;
@@ -115,11 +115,14 @@ header[open] + main > #main-wrap {
   article:nth-child(4) {background: #E9595A;}
 }
 
+section+section {
+  margin-top: 10px;
+}
+
 #sales-info {
   display: flex;
   justify-content: space-between;
   height: 343px;
-  margin-top: 10px;
 
   .map-area {
     width: 66.3%;
@@ -202,6 +205,70 @@ header[open] + main > #main-wrap {
           }
         }
       }
+    }
+  }
+}
+
+.joing {
+  width: 66.3%;
+  background: wheat;
+
+  .joing-group.img-effect {
+    transform: scale(1.1);
+  }
+
+  .joing-group {
+    position: relative;
+    width: 44%;
+    height: auto;
+    overflow: hidden;
+    transition: scale .4s;
+    
+    em {
+      font-style: initial;
+    }
+
+    img {
+      width: 100%;
+    }
+
+    .post {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 225px;
+      padding: 18px;
+      background: rgba(40, 162, 224, 0.85);
+      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+
+      i {
+        display: inline-block;
+        color: #fff;
+      }
+
+      span:first-of-type {
+        display: block;
+        margin-top: 20px;
+        font-size: 12px;
+        opacity: 0.7;
+      }
+
+      p {
+        margin-top: 15px;
+        font-size: 21px;
+        line-height: 1.3;
+      }
+
+      span {
+        display: inline-block;
+        margin: 30px 5px 5px 0px;
+      }
+    }
+
+    
+    .user-profile {
+      display: none;
     }
   }
 }
