--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -3,7 +3,7 @@ body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a, section, articl
 body {font-family: sans-serif; font-size: 13px;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
-input {
+input, button {
   display: inline-block;
   box-sizing: border-box;
   border: 0;
