--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -221,8 +221,43 @@ section + section {
 }
 
 .joing {
-  width: 66.3%;
+  width: 74%;
   background: wheat;
+  overflow: hidden;
+}
+
+.joing .post {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 245px;
+  padding: 18px;
+  background: rgba(40, 162, 224, 0.85);
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.joing .post i {
+  display: inline-block;
+  color: #fff;
+}
+
+.joing .post span:first-of-type {
+  display: block;
+  margin-top: 20px;
+  font-size: 12px;
+  opacity: 0.7;
+}
+
+.joing .post p {
+  margin-top: 15px;
+  font-size: 21px;
+  line-height: 1.3;
+}
+
+.joing .post span {
+  display: inline-block;
+  margin: 30px 5px 5px 0px;
 }
 
 .joing .joing-group.img-effect {
@@ -232,8 +267,10 @@ section + section {
 
 .joing .joing-group {
   position: relative;
+  float: left;
   width: 44%;
   height: auto;
+  margin-right: 10px;
   overflow: hidden;
   -webkit-transition: scale .4s;
   transition: scale .4s;
@@ -247,41 +284,65 @@ section + section {
   width: 100%;
 }
 
-.joing .joing-group .post {
+.joing .joing-group div:nth-of-type(2) {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 225px;
-  padding: 18px;
-  background: rgba(40, 162, 224, 0.85);
-  color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  bottom: 20%;
+  left: 4%;
 }
 
-.joing .joing-group .post i {
+.joing .joing-group div:nth-of-type(2) span {
   display: inline-block;
+  padding: 4px 8px;
+  border: 2px solid #fff;
+  border-radius: 18px;
   color: #fff;
-}
-
-.joing .joing-group .post span:first-of-type {
-  display: block;
-  margin-top: 20px;
   font-size: 12px;
-  opacity: 0.7;
+  font-weight: bold;
 }
 
-.joing .joing-group .post p {
-  margin-top: 15px;
-  font-size: 21px;
-  line-height: 1.3;
+.joing .joing-group div:nth-of-type(3) {
+  position: absolute;
+  bottom: 3%;
+  left: 4%;
+  color: #fff;
 }
 
-.joing .joing-group .post span {
-  display: inline-block;
-  margin: 30px 5px 5px 0px;
+.joing .joing-group div:nth-of-type(3) span {
+  font-weight: bold;
 }
 
-.joing .joing-group .user-profile {
-  display: none;
+.joing .joing-group div:nth-of-type(3) .user-profile {
+  width: 35px;
+  height: 35px;
+}
+
+.joing .joing-group div:nth-of-type(3) input {
+  position: absolute;
+  bottom: 8%;
+  left: 9%;
+  width: 56%;
+  background: #fff;
+  padding: 10px;
+}
+
+.joing .joing-group div:nth-of-type(3) button {
+  position: absolute;
+  bottom: 8%;
+  left: 67%;
+  width: 20%;
+  background: #27A599;
+  padding: 11px;
+  color: #fff;
+  font-weight: 100;
+}
+
+.joing > ul li {
+  width: 25%;
+  float: left;
+}
+
+.joing > ul li .post {
+  position: static;
+  width: 100%;
 }
 /*# sourceMappingURL=index.css.map */
