--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -210,8 +210,43 @@ section+section {
 }
 
 .joing {
-  width: 66.3%;
+  width: 74%;
   background: wheat;
+  overflow: hidden;
+
+  .post {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 245px;
+    padding: 18px;
+    background: rgba(40, 162, 224, 0.85);
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+
+    i {
+      display: inline-block;
+      color: #fff;
+    }
+
+    span:first-of-type {
+      display: block;
+      margin-top: 20px;
+      font-size: 12px;
+      opacity: 0.7;
+    }
+
+    p {
+      margin-top: 15px;
+      font-size: 21px;
+      line-height: 1.3;
+    }
+
+    span {
+      display: inline-block;
+      margin: 30px 5px 5px 0px;
+    }
+  }
 
   .joing-group.img-effect {
     transform: scale(1.1);
@@ -219,8 +254,10 @@ section+section {
 
   .joing-group {
     position: relative;
+    float: left;
     width: 44%;
     height: auto;
+    margin-right: 10px;
     overflow: hidden;
     transition: scale .4s;
     
@@ -232,43 +269,71 @@ section+section {
       width: 100%;
     }
 
-    .post {
+    div:nth-of-type(2) {
       position: absolute;
-      top: 0px;
-      left: 0px;
-      width: 225px;
-      padding: 18px;
-      background: rgba(40, 162, 224, 0.85);
-      color: #fff;
-      font-family: Arial, Helvetica, sans-serif;
-
-      i {
-        display: inline-block;
-        color: #fff;
-      }
-
-      span:first-of-type {
-        display: block;
-        margin-top: 20px;
-        font-size: 12px;
-        opacity: 0.7;
-      }
-
-      p {
-        margin-top: 15px;
-        font-size: 21px;
-        line-height: 1.3;
-      }
+      bottom: 20%;
+      left: 4%;
 
       span {
         display: inline-block;
-        margin: 30px 5px 5px 0px;
+        padding: 4px 8px;
+        border: 2px solid #fff;
+        border-radius: 18px;
+        color: #fff;
+        font-size: 12px;
+        font-weight: bold;
       }
     }
 
-    
-    .user-profile {
-      display: none;
+    div:nth-of-type(3) {
+      position: absolute;
+      bottom: 3%;
+      left: 4%;
+      color: #fff;
+
+      span {
+        font-weight: bold;
+      }
+
+      .user-profile {
+        width: 35px;
+        height: 35px;
+      }
+
+      input {
+        position: absolute;
+        bottom: 8%;
+        left: 9%;
+        width: 56%;
+        background: #fff;
+        padding: 10px;
+      }
+
+      button {
+        position: absolute;
+        bottom: 8%;
+        left: 67%;
+        width: 20%;
+        background: #27A599;
+        padding: 11px;
+        color: #fff;
+        font-weight: 100;
+      }
+    }
+  }
+
+  > ul {
+
+    li {
+      width: 25%;
+      float: left;
+
+      .post {
+        position: static;
+        width: 100%;
+      }
     }
   }
 }
+
+
