--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -336,8 +336,17 @@ section + section {
   font-weight: 100;
 }
 
+.joing > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+}
+
 .joing > ul li {
-  width: 25%;
   float: left;
 }
 
