--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -323,9 +323,13 @@ section+section {
   }
 
   > ul {
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+    
 
     li {
-      width: 25%;
+      // width: 25%;
       float: left;
 
       .post {
